Update Index Page

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                             </a>
                         </div>
                         <div class="col-md-4">
-                            <a href="./technology">
+                            <a href="./technologies.html">
                                 <div class="card align-items-center py-5"
                                     style="border: 2px solid blue; min-height: 400px;">
                                     <img src="./img/microsoft.png" width="100" alt="">
@@ -345,54 +345,48 @@
     <!-- Feature End -->
 
 
-    <!-- Case Start -->
-    <div class="container-fluid bg-light py-5">
-        <div class="container py-5">
-            <div class="mx-auto text-center wow fadeIn" data-wow-delay="0.1s" style="max-width: 500px;">
-                <div class="btn btn-sm border rounded-pill text-primary px-3 mb-3">Case Study</div>
-                <h1 class="mb-4">Knowledge Hub</h1>
-            </div>
-            <div class="row g-4">
+    <!-- Case Study Start -->
+    <section id="news" class="mt-5 py-5 bg-light">
+        <div class="container text-center text-md-start py-5">
+            <div class="row">
+                <div class="col-md-6 my-5">
+                    <h1>Knowledge Hub</h1>
+                </div>
+                <div class="col-md-6 my-5 d-md-flex justify-content-end align-items-center">
+                    <a href="./news" class="btn btn-primary">VIEW ALL</a>
+                </div>
+                <div class="col-lg-4 wow fadeIn" data-wow-delay="0.7s">
+                    <div class="rounded mb-2 p-4 bg-dark">
+                        <div class="d-flex gap-4 fw-bold">
+                            <h6 class="text-white">BioVisualizer</h6>
+                            <h6 class="text-white">Blogs</h6>
+                        </div>
+                        <h4 class="text-white my-2">Empowering Research: Visualizing miRNA and Large Data with Excelra’s BioVisualizer</h4>
+                    </div>
+                </div>
                 <div class="col-lg-4 wow fadeIn" data-wow-delay="0.3s">
-                    <div class="case-item position-relative overflow-hidden rounded mb-2">
-                        <img class="img-fluid" src="img/project-1.jpg" alt="">
-                        <a class="case-overlay text-decoration-none" href="">
-                            <small>BioVisualizer Blogs</small>
-                            <h5 class="lh-base text-white mb-3">Empowering Research: Visualizing miRNA and Large Data
-                                with Excelra’s BioVisualizer
-                            </h5>
-                            <span class="btn btn-square btn-primary"><i class="fa fa-arrow-right"></i></span>
-                        </a>
+                    <div class="rounded mb-2 p-4 bg-dark">
+                        <div class="d-flex gap-4 fw-bold">
+                            <h6 class="text-white">Blogs</h6>
+                            <h6 class="text-white">GOSTAR®</h6>
+                        </div>
+                        <h4 class="text-white my-2">Predicting Caco-2 permeability of small molecule drugs and comparing GOSTAR to a...</h4>
                     </div>
                 </div>
                 <div class="col-lg-4 wow fadeIn" data-wow-delay="0.5s">
-                    <div class="case-item position-relative overflow-hidden rounded mb-2">
-                        <img class="img-fluid" src="img/project-2.jpg" alt="">
-                        <a class="case-overlay text-decoration-none" href="">
-                            <small>Blogs GOSTAR®</small>
-                            <h5 class="lh-base text-white mb-3">Predicting Caco-2 permeability of small molecule drugs
-                                and comparing GOSTAR to a...
-                            </h5>
-                            <span class="btn btn-square btn-primary"><i class="fa fa-arrow-right"></i></span>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-lg-4 wow fadeIn" data-wow-delay="0.7s">
-                    <div class="case-item position-relative overflow-hidden rounded mb-2">
-                        <img class="img-fluid" src="img/project-3.jpg" alt="">
-                        <a class="case-overlay text-decoration-none" href="">
-                            <small>Blogs R&D Technology</small>
-                            <h5 class="lh-base text-white mb-3">Unlocking New Gen AI Capabilities with
-                                Retrieval-Augmented Generation (RAG)
-                            </h5>
-                            <span class="btn btn-square btn-primary"><i class="fa fa-arrow-right"></i></span>
-                        </a>
+                    <div class="rounded mb-2 p-4 bg-dark">
+                        <div class="d-flex gap-4 fw-bold">
+                            <h6 class="text-white">Blogs</h6>
+                            <h6 class="text-white">R&D Technology</h6>
+                        </div>
+                        <h4 class="text-white my-2">Unlocking New Gen AI Capabilities with Retrieval-Augmented Generation (RAG)
+                        </h4>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <!-- Case End -->
+    </section>
+    <!-- Case Study End -->
 
 
     <!-- Apart Start -->
