Update About Page

--- a/about.html
+++ b/about.html
@@ -187,17 +187,17 @@
             <h1 class="text-dark mb-4 border-bottom py-5">Transforming data into insights</h1>
             <div class="row mt-5">
                 <div class="col-md-4"><img src="./img/nano.png" width="100" alt="">
-                    <h3 class="my-3">Intersecting science and technology</h3>
+                    <h4 class="my-3">Intersecting science and technology</h4>
                     <p>Our domain experts and technology innovators unlock the potential of data to accelerate
                         discovery.</p>
                 </div>
                 <div class="col-md-4"><img src="./img/networking.png" width="100" alt="">
-                    <h3 class="my-3">Collaboration and teamwork</h3>
+                    <h4 class="my-3">Collaboration and teamwork</h4>
                     <p>We don’t just provide a service; we’re embedded with your team to find the solution that gets you
                         closer to your objective, faster.</p>
                 </div>
                 <div class="col-md-4"><img src="./img/review.png" width="100" alt="">
-                    <h3 class="my-3">Energy, enthusiasm, and expertise</h3>
+                    <h4 class="my-3">Energy, enthusiasm, and expertise</h4>
                     <p>You are chemists, biologists, data scientists, programmers, and engineers. So are we. And like
                         you, we’re passionate, curious, and creative.</p>
                 </div>
@@ -348,32 +348,32 @@
     <!-- Core Value Start -->
     <div class="container text-center my-5 md-mt-5 wow fadeIn" data-wow-delay="0.5s">
         <h1 class="text-dark mb-4">Our core values</h1>
-        <div class="row gap-4 mt-5">
-            <div class="col-md-2">
+        <div class="row gap-lg-4 gap-md-5 mt-5">
+            <div class="col-lg-2 col-md-3">
                 <img src="./img/handshake.png" width="80" alt="">
                 <h3 class="my-3">Trust</h3>
                 <p>Ensuring we build strong and sustainable relationships with each other and with our clients and
                     partners is an essential part of our success as an organization.</p>
             </div>
-            <div class="col-md-2">
+            <div class="col-lg-2 col-md-3">
                 <img src="./img/magnifying-glass.png" width="80" alt="">
                 <h3 class="my-3">Transparency</h3>
                 <p>Being open and honest are fundamental approaches we take in being transparent with each other and
                     with our clients and partners. </p>
             </div>
-            <div class="col-md-2">
+            <div class="col-lg-2 col-md-3">
                 <img src="./img/teamwork.png" width="80" alt="">
                 <h3 class="my-3">Teamwork</h3>
                 <p>Working together cohesively, towards a common goal, creating a positive working atmosphere, and
                     supporting each other to combine individual strengths to enhance our organizational performance.</p>
             </div>
-            <div class="col-md-2">
+            <div class="col-lg-2 col-md-3">
                 <img src="./img/security.png" width="80" alt="">
                 <h3 class="my-3">Integrity</h3>
                 <p>It is vital that we do the right thing for our staff, our clients and our partners and ensure that
                     our values are at the heart of our decision making.</p>
             </div>
-            <div class="col-md-2">
+            <div class="col-lg-2 col-md-3">
                 <img src="./img/achieve.png" width="80" alt="">
                 <h3 class="my-3">Commitment</h3>
                 <p>We take pride in delivering exceptional results to our clients by continually improving our tools,
