Update Service Page

--- a/service.html
+++ b/service.html
@@ -93,7 +93,7 @@
                         expertise in data engineering, cloud enablement, R&D Technology and ELN & LIMS consulting.</p>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center justify-content-lg-start mb-0">
-                            <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
+                            <li class="breadcrumb-item"><a class="text-white" href="./index.html">Home</a></li>
                             <li class="breadcrumb-item text-white active" aria-current="page">Our Services</li>
                         </ol>
                     </nav>
@@ -236,7 +236,7 @@
                         services help you to quickly identify and respond to observations with necessary and timely
                         action thus helping you to focus on the most promising drug candidates. Thus reducing costs and
                         increasing the chances of success.</p>
-                    <a class="btn btn-primary px-3 mt-auto mx-auto" href="./insights">Discover more</a>
+                    <a class="btn btn-primary px-3 mt-auto mx-auto" href="./insights.html">Discover more</a>
 
                     <div class="our-services my-3">
                         <h3>Our Services</h3>
@@ -260,7 +260,7 @@
                         Our R&D technology solutions are powered by a unique collaborative model that synergizes multi-disciplinary domain expertise with cutting-edge technology and data science.
                     </p>
                     <p>We work with life scientists to design and develop bespoke applications and pipelines, and provide data engineering services to streamline the collection and application of data. And we unlock the potential of cloud technologies, working seamlessly in AWS, Azure, and Google cloud.</p>
-                    <a class="btn btn-primary px-3 mt-auto mx-auto" href="./technologies">Discover more</a>
+                    <a class="btn btn-primary px-3 mt-auto mx-auto" href="./technologies.html">Discover more</a>
 
                     <div class="our-services my-3">
                         <h3>Our Services</h3>
