Create Data Service Page

--- a/data.html
+++ b/data.html
@@ -94,7 +94,7 @@
                         expertise in data engineering, cloud enablement, R&D Technology and ELN & LIMS consulting.</p>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center justify-content-lg-start mb-0">
-                            <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
+                            <li class="breadcrumb-item"><a class="text-white" href="./index.html    ">Home</a></li>
                             <li class="breadcrumb-item"><a href="./service.html" class="text-white">Our Services</a>
                             </li>
                             <li class="breadcrumb-item text-white active" aria-current="page">Data</li>
@@ -168,98 +168,82 @@
     </section>
     <!-- Service End -->
 
-    <!-- Services Section Start -->
-    <section id="services" class="my-5 py-5">
-        <div class="container">
+    <!-- Case Study Start -->
+    <section id="news" class="mt-5 py-5 bg-light">
+        <div class="container text-center text-md-start py-5">
             <div class="row">
-                <div class="col-md-6 py-5" id="data">
-                    <h1 class="mb-3 mt-5">Data</h1>
-                    <p class="">
-                        Data is the raw material on which all knowledge is built. We organize, standardize, and digitize
-                        it, providing the strongest foundation to develop your research.
-                    </p>
-                    <p>We provide custom curation, semantics data solutions, clinical data analytics, and lab data
-                        analytics services that accelerate you towards your objectives.</p>
-                    <a class="btn btn-primary px-3 mt-auto mx-auto" href="./data">Discover more</a>
-
-                    <div class="our-services my-3">
-                        <h3>Our Services</h3>
-                        <ul>
-                            <li class="my-3"><a href="" class="text-primary">Data curation</a></li>
-                            <li class="my-3"><a href="" class="text-primary">Clinical data services</a></li>
-                            <li class="my-3"><a href="" class="text-primary">Semantic data services</a></li>
-                        </ul>
+                <div class="col-md-6 my-3">
+                    <h1>View our case studies</h1>
+                </div>
+                <div class="col-md-6 my-3 d-md-flex justify-content-end align-items-center">
+                    <a href="./news" class="btn btn-primary">VIEW ALL CASE STUDIES</a>
+                </div>
+                <div class="col-lg-4 wow fadeIn" data-wow-delay="0.3s">
+                    <div class="rounded mb-2 p-4"
+                        style="background-image: url(./img/Website-banner-1870x770.jpg); background-size: cover;">
+                        <div class="d-flex gap-4 fw-bold">
+                            <h6 class="text-white">Biomarkers</h6>
+                            <h6 class="text-white">Data</h6>
+                        </div>
+                        <h4 class="text-white my-2">Advanced Target Profiling in Cancer – A Spatial and Single-Cell
+                            Transcriptomics Approach
+                        </h4>
                     </div>
                 </div>
-                <div class="col-md-6 py-5 text-center mt-lg-5  wow fadeIn" data-wow-delay="0.5s">
-                    <div class="py-5 rounded"
-                        style="background: rgb(148,233,172);background: linear-gradient(90deg, rgba(148,233,172,1) 30%, rgba(238,174,202,1) 90%); height: 300px;">
-                        <img src="./img/rectangle.png" class="img-fluid mt-5" width="100" alt="">
+                <div class="col-lg-4 wow fadeIn" data-wow-delay="0.5s">
+                    <div class="rounded mb-2 p-4"
+                        style="background-image: url(./img/data-driven1.png); background-size: cover;">
+                        <div class="d-flex gap-4 fw-bold">
+                            <h6 class="text-white">Biomarkers</h6>
+                            <h6 class="text-white">Data</h6>
+                        </div>
+                        <h4 class="text-white my-2">Data driven disease-indication expansion and prioritization for
+                            specific target inhibitor
+                        </h4>
                     </div>
                 </div>
-
-
-                <div class="col-md-6 py-5" id="insights">
-                    <h1 class="mb-3 mt-5">Insights</h1>
-                    <p class="">
-                        Data can tell incredible stories. But it needs to be filtered, structured, translated, and
-                        organized so that you interpret and make sense of it.
-                    </p>
-                    <p>Our comprehensive bioinformatics and data science services extract the story from the noise of
-                        data through scientific data curation enabling actionable insights. Our custom visualization
-                        services help you to quickly identify and respond to observations with necessary and timely
-                        action thus helping you to focus on the most promising drug candidates. Thus reducing costs and
-                        increasing the chances of success.</p>
-                    <a class="btn btn-primary px-3 mt-auto mx-auto" href="./insights">Discover more</a>
-
-                    <div class="our-services my-3">
-                        <h3>Our Services</h3>
-                        <ul>
-                            <li class="my-3"><a href="" class="text-primary">Bioinformatics</a></li>
-                            <li class="my-3"><a href="" class="text-primary">Data science</a></li>
-                            <li class="my-3"><a href="" class="text-primary">Visualization</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md-6 py-5 text-center mt-lg-5  wow fadeIn" data-wow-delay="0.5s">
-                    <div class="py-5 rounded"
-                        style="background: rgb(148,233,172); background: linear-gradient(90deg, rgba(148,233,172,1) 30%, rgba(238,174,202,1) 90%); height: 300px;">
-                        <img src="./img/full-screen.png" class="img-fluid mt-5" width="100" alt="">
-                    </div>
-                </div>
-
-                <div class="col-md-6 py-5" id="technology">
-                    <h1 class="mb-3 mt-5">R&D technology</h1>
-                    <p class="">
-                        Our R&D technology solutions are powered by a unique collaborative model that synergizes
-                        multi-disciplinary domain expertise with cutting-edge technology and data science.
-                    </p>
-                    <p>We work with life scientists to design and develop bespoke applications and pipelines, and
-                        provide data engineering services to streamline the collection and application of data. And we
-                        unlock the potential of cloud technologies, working seamlessly in AWS, Azure, and Google cloud.
-                    </p>
-                    <a class="btn btn-primary px-3 mt-auto mx-auto" href="./technologies">Discover more</a>
-
-                    <div class="our-services my-3">
-                        <h3>Our Services</h3>
-                        <ul>
-                            <li class="my-3"><a href="" class="text-primary">Data engineering</a></li>
-                            <li class="my-3"><a href="" class="text-primary">Cloud enablement</a></li>
-                            <li class="my-3"><a href="" class="text-primary">Product design and development</a></li>
-                            <li class="my-3"><a href="" class="text-primary">ELN and LIMS consulting</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md-6 py-5 text-center mt-lg-5  wow fadeIn" data-wow-delay="0.5s">
-                    <div class="py-5 rounded"
-                        style="background: rgb(148,233,172); background: linear-gradient(90deg, rgba(148,233,172,1) 30%, rgba(238,174,202,1) 90%); height: 300px;">
-                        <img src="./img/microsoft.png" class="img-fluid mt-5" width="100" alt="">
+                <div class="col-lg-4 wow fadeIn" data-wow-delay="0.7s">
+                    <div class="rounded mb-2 p-4"
+                        style="background-image: url(./img/monogenic-banner-image-1870x770.png); background-size: cover;">
+                        <div class="d-flex gap-4 fw-bold">
+                            <h6 class="text-white">Data</h6>
+                            <h6 class="text-white">Insights</h6>
+                        </div>
+                        <h4 class="text-white my-2">Data-Driven Solutions for Rare Monogenic Blood
+                            Disorders: Identifying and Prioritizing Treatment...
+                        </h4>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- Services Section End -->
+    <!-- Case Study End -->
+
+
+    <!-- Why Xana Start -->
+    <section id="why_xana">
+        <div class="container my-5 md-mt-5 text-center">
+            <h1 class="text-dark mb-4 border-bottom py-5">Why Xana Bioinformatics</h1>
+            <div class="row mt-5">
+                <div class="col-md-4"><img src="./img/Flexible-deployment.svg" width="100" alt="">
+                    <h4 class="my-3">Flexible deployment</h4>
+                    <p>Your data, however, you want it. On-Cloud (AWS, Azure, OpenShift), on-premises, or data transfer.
+                    </p>
+                </div>
+                <div class="col-md-4"><img src="./img/Cross-functional-expertise.svg" width="100" alt="">
+                    <h4 class="my-3">Cross-functional, interdisciplinary expertise</h4>
+                    <p>We are domain experts, semantic specialists, data analysts, and engineers. Working together,
+                        speaking your language.</p>
+                </div>
+                <div class="col-md-4"><img src="./img/Analysis-ready-data-sets.svg" width="100" alt="">
+                    <h4 class="my-3">Analysis-ready data sets</h4>
+                    <p>Our expertly curated analysis-ready data helps you to conduct a wide range of analyses to support
+                        your drug discovery to development initiatives.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Why Xana End -->
 
 
     <!-- Footer Start -->
