Add some assets

--- a/service.html
+++ b/service.html
@@ -34,7 +34,7 @@
 
 <body>
     <!-- Spinner Start -->
-    <div id="spinner"
+    <div id="spinner"style="background-image: url(./img/vibrant-summer.avif); background-size: cover; padding: 100px 0px;
         class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
         <div class="spinner-grow text-primary" style="width: 3rem; height: 3rem;" role="status">
             <span class="sr-only">Loading...</span>
@@ -211,9 +211,9 @@
                     <div class="our-services my-3">
                         <h3>Our Services</h3>
                         <ul>
-                            <li class="my-3"><a href="" class="text-primary">Data curation</a></li>
+                            <li class="my-3"><a href="data-curation.html" class="text-primary">Data curation</a></li>
                             <li class="my-3"><a href="" class="text-primary">Clinical data services</a></li>
-                            <li class="my-3"><a href="" class="text-primary">Semantic data services</a></li>
+                            <li class="my-3"><a href="Semantic.html" class="text-primary">Semantic data services</a></li>
                         </ul>
                     </div>
                 </div>
@@ -241,9 +241,9 @@
                     <div class="our-services my-3">
                         <h3>Our Services</h3>
                         <ul>
-                            <li class="my-3"><a href="" class="text-primary">Bioinformatics</a></li>
-                            <li class="my-3"><a href="" class="text-primary">Data science</a></li>
-                            <li class="my-3"><a href="" class="text-primary">Visualization</a></li>
+                            <li class="my-3"><a href="Insight-bioinformatics.html" class="text-primary">Bioinformatics</a></li>
+                            <li class="my-3"><a href="data-sceince.html" class="text-primary">Data science</a></li>
+                            <li class="my-3"><a href="visualization.html" class="text-primary">Visualization</a></li>
                         </ul>
                     </div>
                 </div>
@@ -266,9 +266,9 @@
                         <h3>Our Services</h3>
                         <ul>
                             <li class="my-3"><a href="" class="text-primary">Data engineering</a></li>
-                            <li class="my-3"><a href="" class="text-primary">Cloud enablement</a></li>
+                            <li class="my-3"><a href="Cloud-enablement.html" class="text-primary">Cloud enablement</a></li>
                             <li class="my-3"><a href="" class="text-primary">Product design and development</a></li>
-                            <li class="my-3"><a href="" class="text-primary">ELN and LIMS consulting</a></li>
+                            <li class="my-3"><a href="Consulting.html " class="text-primary">ELN and LIMS consulting</a></li>
                         </ul>
                     </div>
                 </div>
