--- a/Consulting.html
+++ b/Consulting.html
@@ -138,12 +138,15 @@
     <section id="data">
         <div class="container">
             <div class="row">
-                <h6 class="text-center mt-lg-5 py-2">Your focus is on developing new treatments for patients in need. An ELN or LIMS can help, but slow</h6>
-                   
-                    <h6 class="text-center">implementation will stall innovation.</h6>
-                    <p class="text-center mt-3">You want to spend your time changing lives, not managing digital applications.</p>
+                <h5 class="text-center mt-lg-5 py-2">Your focus is on developing new treatments for patients in need. An
+                    ELN or LIMS can help, but slow</h5>
 
-                     <p class="text-center">Excelra will deliver your digital transformation. You can focus on innovation.</p>
+                <h5 class="text-center">implementation will stall innovation.</h5>
+                <p class="text-center mt-3 fs-5">You want to spend your time changing lives, not managing digital
+                    applications.</p>
+
+                <p class="text-center fs-5">Excelra will deliver your digital transformation. You can focus on innovation.
+                </p>
             </div>
         </div>
 
@@ -151,48 +154,42 @@
 
     <!--Service section start -->
     <section id="data">
-        <div class="container">
-            <div class="row mt-5 p-4">
-                <h1 class="text-center text-primary">Our Services</h1>
-                <div class="col-md-3 mt-3">
+        <div class="container my-5 py-5">
+            <h1 class="text-center text-primary">Our Services</h1>
+                <p class="text-center fs-5">Our business consultants and scientific advisors help implement and optimize your ELN and LIMS,</p>
+                <p class="text-center fs-5 "> streamline workflows, achieve digital transformation goals, and accelerate research.</p>
+            <div class="row mt-5 gap-5">
+                <div class="col-md-2 mt-3">
                     <img src="./img/cloud-computing.png" class="img-fluid" style="height: 80px; max-height: 80px;"
                         alt="">
-                    <h4 class="text-start text-dark mt-lg-5">Cloud architecture and roadmap</h4>
-                    <p class="mt-4">First, we draw a blueprint for your transformation. We assess your business goals
-                        and your
-                        application and infrastructure needs. We design and develop your architecture and integration.
-                        And we align your security and IT requirements.</p>
+                    <h4 class="text-start text-dark mt-lg-5">Strategic consulting and workflow optimization</h4>
+
                 </div>
-                <div class="col-md-3 mt-3">
+                <div class="col-md-2 mt-3">
                     <img src="./img/cloud-computing (1).png" class="img-fluid" style="height: 80px; max-height: 80px;"
                         alt="">
-                    <h4 class="text-start text-dark mt-lg-5">Cloud transformation and migration</h4>
-                    <p class="mt-4">Next, we define a project plan. We complete end-to-end testing and configuration of
-                        cloud
-                        resources. We successfully execute the migration to data lakes and warehouses, and seamlessly
-                        hand over to the operations team.</p>
+                    <h4 class="text-start text-dark mt-lg-5">ELN and LIMS implementation and delivery</h4>
+
                 </div>
-                <div class="col-md-3 mt-3">
+                <div class="col-md-2 mt-3">
                     <img src="./img/cloud.png" class="img-fluid" style="height: 80px; max-height: 80px;" alt="">
-                    <h4 class="text-start text-dark mt-lg-5">Cloud
-                        management</h4>
-                    <p class="mt-lg-5">We maintain governance and manage service delivery. We provide ongoing
-                        engineering and DevOps
-                        services, ensuring workflow automation remains efficient and effective. We monitor performance
-                        and establish security compliance.</p>
+                    <h4 class="text-start text-dark mt-lg-5">Program and project management services</h4>
+
                 </div>
-                <div class="col-md-3 mt-3">
+                <div class="col-md-2 mt-3">
                     <img src="./img/cloud-computing (2).png" class="img-fluid" style="height: 80px; max-height: 80px;"
                         alt="">
-                    <h4 class="text-start text-dark mt-lg-5">Cloud
-                        optimization</h4>
-                    <p class="mt-lg-5">We continue to review the output to identify optimization opportunities. We
-                        strengthen cloud
-                        security and introduce new automation and native services. We commit to continuous service
-                        improvement to maintain maximum productivity.</p>
+                    <h4 class="text-start text-dark mt-lg-5">Migration, integration, and app development</h4>
+
                 </div>
 
+                <div class="col-md-2 mt-3">
+                    <img src="./img/cloud-computing (2).png" class="img-fluid" style="height: 80px; max-height: 80px;"
+                        alt="">
+                    <h4 class="text-start text-dark mt-lg-5">Managed
+                        services</h4>
 
+                </div>
 
             </div>
         </div>
