--- a/Cloud-enablement.html
+++ b/Cloud-enablement.html
@@ -199,7 +199,7 @@
     <section id="data">
         <div class="container-fluid">
             <div class="row mt-5"
-                style="background-image: url(./img/vibrant-summer.avif); background-size: cover; padding: 100px 0px;"">
+                style="background-image: url(./img/vibrant-summer.avif); background-size: cover; padding: 100px 0px;">
                 <div class=" col-md-6 mt-3">
                 <img src="./img/clin-data.jpg" style="min-height: 600px;" class="img-fluid rounded" alt="">
             </div>
