--- a/Cloud-enablement.html
+++ b/Cloud-enablement.html
@@ -37,7 +37,7 @@
     <!-- Spinner Start -->
     <div id="spinner"
         class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
-        <div class="spinner-grow text-primary" style="width: 3rem; height: 3rem;" role="status">
+        <div class="spinner-grow " style="width: 3rem; height: 3rem;" role="status">
             <span class="sr-only">Loading...</span>
         </div>
     </div>
@@ -146,7 +146,7 @@
     <section id="data">
         <div class="container">
             <div class="row mt-5 p-4">
-                <h1 class="text-center text-primary">Your journey to the cloud takes four steps</h1>
+                <h1 class="text-center ">Your journey to the cloud takes four steps</h1>
                 <div class="col-md-3 mt-3">
                     <img src="./img/cloud-computing.png" class="img-fluid" style="height: 80px; max-height: 80px;"
                         alt="">
@@ -208,7 +208,7 @@
 
             <div class="col-md-6 mt-3  px-5">
                 <h5 class=" text-dark mb-6 animated slideInRight"> Case Study</h5>
-                <h2 class="text-primary mt-3 fs-1">AWS DevOps for Infrastructure Modernization
+                <h2 class=" mt-3 fs-1">AWS DevOps for Infrastructure Modernization
                 </h2>
                 <p class="mt-4">We were engaged in helping our clients identify alternate indications for their
                     assets. We developed an integrated strategy, providing our proprietary Global Repurposing
@@ -241,19 +241,19 @@
 
     <section id="services" class="my-5 py-5">
         <div class="container">
-            <h1 class="text-center text-primary ">Why XANA</h1>
+            <h1 class="text-center  ">Why XANA Bioinformatics</h1>
 
             <div class="row ">
-                <div class="col-md-3 mt-5">
-                    <div class="border text-start p-5" style="background-color: rgb(240, 240, 240); min-height: 500px;">
+                <div class="col-lg-3 col-md-6 mt-5">
+                    <div class="border text-start p-3" style="background-color: rgb(240, 240, 240); min-height: 430px;">
                         <h3 class="text-dark">Intersecting science and technology</h3>
                         <p class="text-start mt-lg-5">That’s where you’ll find us. Our technical engineers work at the
                             cutting edge of digital innovation and our scientists are experts in their field. They work
                             in synergy and know exactly what they need from each other. And what you need from us.</p>
                     </div>
                 </div>
-                <div class="col-md-3 mt-5">
-                    <div class="border text-start p-5" style="background-color: rgb(240, 240, 240); min-height: 505px">
+                <div class="col-lg-3 col-md-6 mt-5">
+                    <div class="border text-start p-3" style="background-color: rgb(240, 240, 240); min-height: 430px">
                         <h3 class="text-dark">Not just providers; partners
 
                         </h3>
@@ -262,16 +262,16 @@
                             imposing our preference on you.</p>
                     </div>
                 </div>
-                <div class="col-md-3 mt-5">
-                    <div class="border text-start p-5" style="background-color: rgb(240, 240, 240); min-height: 505px">
+                <div class="col-lg-3 col-md-6 mt-5">
+                    <div class="border text-start p-3" style="background-color: rgb(240, 240, 240); min-height: 430px">
                         <h3 class="text-dark">Experience and expertise </h3>
                         <p class="text-start mt-2">We have a proven track record of data and application migration,
                             developing data environments for early R&D and pre-clinical research, and configuring
                             infrastructure for bioinformatics projects.</p>
                     </div>
                 </div>
-                <div class="col-md-3 mt-5">
-                    <div class="border text-start p-5" style="background-color: rgb(240, 240, 240); min-height: 505px">
+                <div class="col-lg-3 col-md-6 mt-5">
+                    <div class="border text-start p-3" style="background-color: rgb(240, 240, 240); min-height: 430px">
                         <h3 class="text-dark">Experience and expertise </h3>
                         <p class="text-start mt-2">We amplify your value stream on the cloud provider that works best for you. </p>
                     </div>
@@ -281,59 +281,60 @@
         </div>
     </section>
 
-    <!--Why XANA Section End -->
-    <section id="services" class="my-5 py-5">
-        <div class="container">
-            <h1 class="text-start text-primary ">Knowledge Hub</h1>
-
-
-            <div class="row ">
-                <div class="col-md-4 mt-5 ">
-                    <div class="border text-start p-5 rounded" style="background-color: #2d3142; min-height: 292px;">
-                        <div class="d-flex gap-4">
-                            <h6 class="text-light">BioVisualizer blogs</h6>
-
+    <!-- Case Study Start -->
+    <section id="news" class="mt-5 py-5 bg-light">
+        <div class="container text-center text-md-start py-5">
+            <div class="row">
+                <div class="col-md-6 my-5">
+                    <h1>Knowledge Hub</h1>
+                </div>
+                <div class="col-md-6 my-5 d-md-flex justify-content-end align-items-center">
+                    <a href="./news" class="btn btn-primary">VIEW ALL</a>
+                </div>
+                <div class="col-lg-4 wow fadeIn" data-wow-delay="0.7s">
+                    <div class="rounded mb-2 p-4 bg-dark">
+                        <div class="d-flex gap-4 fw-bold">
+                            <h6 class="text-white">BioVisualizer</h6>
+                            <h6 class="text-white">Blogs</h6>
                         </div>
-                        <p class="text-light text-start mt-4 h4">
-
-                            Empowering Research: Visualizing miRNA and Large Data with Excelra’s BioVisualizer</p>
+                        <h4 class="text-white my-2">Empowering Research: Visualizing miRNA and Large Data with Excelra’s
+                            BioVisualizer</h4>
                     </div>
                 </div>
-                <div class="col-md-4 mt-5">
-                    <div class="border text-start p-5 rounded" style="background-color: #2d3142;">
-                        <h6 class="text-light">
-                            Blogs GOSTAR®</h6>
-                        <p class="text-light text-start mt-4 h4">Predicting Caco-2 permeability of small molecule drugs
-                            and comparing GOSTAR to a benchmarking dataset
-                        </p>
+                <div class="col-lg-4 wow fadeIn" data-wow-delay="0.3s">
+                    <div class="rounded mb-2 p-4 bg-dark">
+                        <div class="d-flex gap-4 fw-bold">
+                            <h6 class="text-white">Blogs</h6>
+                            <h6 class="text-white">GOSTAR®</h6>
+                        </div>
+                        <h4 class="text-white my-2">Predicting Caco-2 permeability of small molecule drugs and comparing
+                            GOSTAR to a...</h4>
                     </div>
                 </div>
-                <div class="col-md-4 mt-5">
-                    <div class="border text-start p-5 rounded" style="background-color:  #2d3142; min-height: 292px">
-                        <h6 class="text-light">
-                            BlogsR&D Technology </h6>
-                        <p class="text-start text-light mt-4 h4"> Unlocking New Gen AI Capabilities with
-                            Retrieval-Augmented Generation (RAG)</p>
+                <div class="col-lg-4 wow fadeIn" data-wow-delay="0.5s">
+                    <div class="rounded mb-2 p-4 bg-dark">
+                        <div class="d-flex gap-4 fw-bold">
+                            <h6 class="text-white">Blogs</h6>
+                            <h6 class="text-white">R&D Technology</h6>
+                        </div>
+                        <h4 class="text-white my-2">Unlocking New Gen AI Capabilities with Retrieval-Augmented
+                            Generation (RAG)
+                        </h4>
                     </div>
                 </div>
-
             </div>
         </div>
     </section>
+    <!-- Case Study End -->
 
-    <!--Why XANA Section End -->
-
-    <!-- Queries section start-->
-
-
-    <!-- Queries section end-->
+    
     <!-- Footer Start -->
     <div class="container-fluid bg-dark text-white-50 footer pt-5">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.1s">
                     <a href="index.html" class="d-inline-block mb-3">
-                        <h1 class="text-white">AI<span class="text-primary">.</span>Tech</h1>
+                        <h1 class="text-white">AI<span class="">.</span>Tech</h1>
                     </a>
                     <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor diam ipsum et tempor sit. Aliqu diam
                         amet diam et eos labore. Clita erat ipsum et lorem et sit, sed stet no labore lorem sit. Sanctus
