Add Service Page

--- a/Consulting.html
+++ b/Consulting.html
@@ -94,15 +94,14 @@
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center justify-content-lg-start mb-0">
                             <li class="breadcrumb-item" text-white mb-6 animated slideInRightreadcrumb-item"><a
-                                    class="text-white" href="#">Home</a></li>
+                                    class="text-white" href="./index.html">Home</a></li>
                             <li class="breadcrumb-item"><a href="./service.html" class="text-white">Our Services</a>
                             </li>
-                            <li class="breadcrumb-item text-white active" aria-current="page">
-                                R&D technology services</li>
-                            <li class="breadcrumb-item"><a href="./service.html" class="text-white">ELN and LIMS
-                                    Consulting Services</a>
+                            <li class="breadcrumb-item"><a href="./technologies.html" class="text-white">R&D technology
+                                    services</a>
                             </li>
-
+                            <li class="breadcrumb-item text-white active" aria-current="page">
+                                Consulting Services</li>
                         </ol>
                     </nav>
                 </div>
@@ -145,7 +144,8 @@
                 <p class="text-center mt-3 fs-5">You want to spend your time changing lives, not managing digital
                     applications.</p>
 
-                <p class="text-center fs-5">Excelra will deliver your digital transformation. You can focus on innovation.
+                <p class="text-center fs-5">Excelra will deliver your digital transformation. You can focus on
+                    innovation.
                 </p>
             </div>
         </div>
@@ -156,37 +156,37 @@
     <section id="data">
         <div class="container my-5 py-5">
             <h1 class="text-center text-primary">Our Services</h1>
-                <p class="text-center fs-5">Our business consultants and scientific advisors help implement and optimize your ELN and LIMS,</p>
-                <p class="text-center fs-5 "> streamline workflows, achieve digital transformation goals, and accelerate research.</p>
-            <div class="row mt-5 gap-5">
-                <div class="col-md-2 mt-3">
+            <p class="text-center fs-5">Our business consultants and scientific advisors help implement and optimize
+                your ELN and LIMS,</p>
+            <p class="text-center fs-5 "> streamline workflows, achieve digital transformation goals, and accelerate
+                research.</p>
+            <div class="row mt-5 gap-lg-4 gap-md-5 text-center justify-content-lg-between">
+                <div class="col-lg-2 col-md-3 mt-3">
                     <img src="./img/cloud-computing.png" class="img-fluid" style="height: 80px; max-height: 80px;"
                         alt="">
-                    <h4 class="text-start text-dark mt-lg-5">Strategic consulting and workflow optimization</h4>
-
+                    <h4 class="text-dark mt-lg-5">Strategic consulting and workflow optimization</h4>
                 </div>
-                <div class="col-md-2 mt-3">
+                <div class="col-lg-2 col-md-3 mt-3">
                     <img src="./img/cloud-computing (1).png" class="img-fluid" style="height: 80px; max-height: 80px;"
                         alt="">
-                    <h4 class="text-start text-dark mt-lg-5">ELN and LIMS implementation and delivery</h4>
-
+                    <h4 class="text-dark mt-lg-5">ELN and LIMS implementation and delivery</h4>
                 </div>
-                <div class="col-md-2 mt-3">
+                <div class="col-lg-2 col-md-3 mt-3">
                     <img src="./img/cloud.png" class="img-fluid" style="height: 80px; max-height: 80px;" alt="">
-                    <h4 class="text-start text-dark mt-lg-5">Program and project management services</h4>
+                    <h4 class="text-dark mt-lg-5">Program and project management services</h4>
 
                 </div>
-                <div class="col-md-2 mt-3">
+                <div class="col-lg-2 col-md-3 mt-3">
                     <img src="./img/cloud-computing (2).png" class="img-fluid" style="height: 80px; max-height: 80px;"
                         alt="">
-                    <h4 class="text-start text-dark mt-lg-5">Migration, integration, and app development</h4>
+                    <h4 class="text-dark mt-lg-5">Migration, integration, and app development</h4>
 
                 </div>
 
-                <div class="col-md-2 mt-3">
+                <div class="col-lg-2 col-md-3 mt-3">
                     <img src="./img/cloud-computing (2).png" class="img-fluid" style="height: 80px; max-height: 80px;"
                         alt="">
-                    <h4 class="text-start text-dark mt-lg-5">Managed
+                    <h4 class="text-dark mt-lg-5">Managed
                         services</h4>
 
                 </div>
