--- a/service.html
+++ b/service.html
@@ -34,7 +34,7 @@
 
 <body>
     <!-- Spinner Start -->
-    <div id="spinner"style="background-image: url(./img/vibrant-summer.avif); background-size: cover; padding: 100px 0px;
+    <div id="spinner"
         class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
         <div class="spinner-grow text-primary" style="width: 3rem; height: 3rem;" role="status">
             <span class="sr-only">Loading...</span>
